# ironic-netconfig

./: ironic_netconfig.py  setup.cfg
elements/ironic-netconfig/: source-repository-ironic-netconfig
elements/ironic-netconfig/install.d/: 80-ironic-netconfig-install
