[metadata]
name = ironic_netconfig
summary = NetworkManager configuration deploy step for Ironic
author = Dmitry Tantsur
python-requires = >=3.6

[files]
modules =
    ironic_netconfig

[entry_points]
ironic_python_agent.hardware_managers =
    ironic_netconfig = ironic_netconfig:NetConfigHardwareManager
